force-app/main/default/objects/Requirement__c/Requirement__c.object-meta.xml
<CustomObject>
    <description>Used for Professional Service Requests, allows tracking and reporting on individual portions of a custom request.</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Requirement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>