force-app/main/default/objects/Requirement__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date requirement Assigned</inlineHelpText>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>