force-app/main/default/objects/Requirement__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Total number of hours to quote for service</description>
    <inlineHelpText>Enter the total number of hours that should be quoted on custom work</inlineHelpText>
    <label>Qty</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>