force-app/main/default/objects/Requirement__c/fields/Related_Practice__c.field-meta.xml
<CustomField>
    <fullName>Related_Practice__c</fullName>
    <businessOwnerGroup>Business_Systems_Internal</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>