force-app/main/default/objects/Requirement__c/fields/Requested_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-014837

Defaults date based on the priority that was selected on the case and the case create date.  Does not include Saturday or Sunday&apos;s.</description>
    <formula>IF( ISPICKVAL(Case__r.Priority , &quot;24 Hrs / Next Day&quot;) , CASE( MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
0,DATEVALUE(CreatedDate) + 1 + 1, /* Sun:CreatedDate+ 1 wknd day + 1 day */
5,DATEVALUE(CreatedDate) + 2 + 1, /* Fri:CreatedDate+ 2 wknd days + 1 day */
6,DATEVALUE(CreatedDate) + 2 + 2, /* Sat:CreatedDate+ 2 wknd days + 2 days */
DATEVALUE(CreatedDate) + 1 /* Default (Mon/Tue/Wed):CreatedDate+ 1 day */
),
IF( ISPICKVAL(Case__r.Priority , &quot;2 Business Days&quot;) , CASE( MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
0,DATEVALUE(CreatedDate) + 1 + 2, /* Sun:CreatedDate+ 1 wknd day + 2 days */
4,DATEVALUE(CreatedDate) + 2 + 2, /* Thurs:CreatedDate+ 2 wknd days + 2 days */
5,DATEVALUE(CreatedDate) + 2 + 2, /* Fri:CreatedDate+ 2 wknd days + 2 days */
6,DATEVALUE(CreatedDate) + 2 + 2, /* Sat:CreatedDate+ 2 wknd days + 2 days */
DATEVALUE(CreatedDate) + 2 /* Default (Mon/Tue/Wed):CreatedDate+ 2 days */
),
IF( ISPICKVAL(Case__r.Priority , &quot;4 Business Days&quot;) , CASE( MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
0,DATEVALUE(CreatedDate) + 1 + 4, /* Sun:CreatedDate+ 1 wknd day + 4 days */
1,DATEVALUE(CreatedDate) + 4, /* Mon:CreatedDate + 4 days */
DATEVALUE(CreatedDate) + 2 + 4 /* Default (Tue/Wed/Thur/Fri/Sat):CreatedDate+ 4 days */
),
IF( ISPICKVAL(Case__r.Priority , &quot;5 Business Days&quot;) , CASE( MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
0,DATEVALUE(CreatedDate) + 1 + 5, /* Sun:CreatedDate+ 1 wknd day + 5 days */
1,DATEVALUE(CreatedDate) + 5, /* Mon:CreatedDate+ 5 days */
DATEVALUE(CreatedDate) + 2 + 5 /* Default (Tue/Wed/Thurs/Fri/Sat):CreatedDate+ 2 wknd + 5 days */
),DATEVALUE(CreatedDate) + 14))))</formula>
    <inlineHelpText>Target date based on the priority that was selected on the case and the case creation date.</inlineHelpText>
    <label>Requested Completion Date</label>
    <type>Date</type>
</CustomField>