force-app/main/default/objects/Requirement__c/validationRules/Cannot_Close_If_Owner_Is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Close_If_Owner_Is_Blank</fullName>
    <active>true</active>
    <description>Cannot change the status of a requirement to &quot;not needed&quot; or &quot;completed&quot; if the owner field is blank</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c, &quot;Not Needed&quot;), ISPICKVAL(Status__c, &quot;Complete&quot;)), ISBLANK( Owner__c))</errorConditionFormula>
    <errorMessage>A requirement cannot be closed out if the owner field is blank</errorMessage>
</ValidationRule>