force-app/main/default/objects/Requirement__c/validationRules/Owner_and_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_and_Status_Change</fullName>
    <active>false</active>
    <description>Due to some field updates, the owner and status can not be changed at the same time.</description>
    <errorConditionFormula>AND(ISCHANGED(Owner__c), ISCHANGED(Status__c))</errorConditionFormula>
    <errorMessage>Owner and Status cannot be changed at the same time.  Update the owner, save the record and then update the status.</errorMessage>
</ValidationRule>