force-app/main/default/objects/Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>Practice__c</columns>
    <columns>Owner__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>All_NI_Internal_Standard_Users</group>
    </sharedTo>
</ListView>