force-app/main/default/objects/Requirement__c/listViews/All_Pending_Reqirements.listView-meta.xml
<ListView>
    <fullName>All_Pending_Reqirements</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Practice__c</columns>
    <columns>Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Practice__c</field>
        <operation>notEqual</operation>
        <value>Project Management</value>
    </filters>
    <label>All Pending Requirements</label>
    <sharedTo>
        <group>All_NI_Internal_Standard_Users</group>
    </sharedTo>
</ListView>