force-app/main/default/objects/Requirement__c/listViews/Pending_Service_Optimization.listView-meta.xml
<ListView>
    <fullName>Pending_Service_Optimization</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Owner__c</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Practice__c</field>
        <operation>equals</operation>
        <value>Service Optimization</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Service Optimization</label>
</ListView>