force-app/main/default/objects/Requirement__c/listViews/Pending_Training_and_Consulting.listView-meta.xml
<ListView>
    <fullName>Pending_Training_and_Consulting</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Practice__c</columns>
    <columns>Case_Subject__c</columns>
    <columns>Owner__c</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Days_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Practice__c</field>
        <operation>equals</operation>
        <value>Consulting,HRM Consulting,HRM Training,Training</value>
    </filters>
    <label>Pending Training and Consulting</label>
    <sharedTo>
        <group>All_NI_Internal_Standard_Users</group>
    </sharedTo>
</ListView>